crates/escalier_parser/src/snapshots/escalier_parser__parser__tests__lex_nested_template_strings.snap
---
source: crates/escalier_parser/src/parser.rs
expression: "tokens[0].kind"
---
StrTemplateLit {
    parts: [
        Token {
            kind: StrLit(
                "a",
            ),
            span: 0..2,
        },
        Token {
            kind: StrLit(
                "",
            ),
            span: 12..13,
        },
    ],
    exprs: [
        TemplateLiteral(
            TemplateLiteral {
                span: 4..11,
                parts: [
                    Str {
                        span: 4..6,
                        value: "b",
                    },
                    Str {
                        span: 10..11,
                        value: "",
                    },
                ],
                exprs: [
                    Ident(
                        Ident {
                            name: "c",
                            span: 8..9,
                        },
                    ),
                ],
            },
        ),
    ],
}
