crates/escalier_parser/src/snapshots/escalier_parser__parser__tests__lex_nested_template_strings_complex.snap
---
source: crates/escalier_parser/src/parser.rs
expression: "tokens[0].kind"
---
StrTemplateLit {
    parts: [
        Token {
            kind: StrLit(
                "ids = ",
            ),
            span: 0..7,
        },
        Token {
            kind: StrLit(
                "",
            ),
            span: 49..50,
        },
    ],
    exprs: [
        Expr {
            kind: Call(
                Call {
                    callee: Expr {
                        kind: Member(
                            Member {
                                object: Expr {
                                    kind: Call(
                                        Call {
                                            callee: Expr {
                                                kind: Member(
                                                    Member {
                                                        object: Expr {
                                                            kind: Ident(
                                                                Ident {
                                                                    name: "ids",
                                                                    span: 9..12,
                                                                },
                                                            ),
                                                            span: 9..12,
                                                            inferred_type: None,
                                                        },
                                                        property: Ident(
                                                            Ident {
                                                                name: "map",
                                                                span: 13..16,
                                                            },
                                                        ),
                                                        opt_chain: false,
                                                    },
                                                ),
                                                span: 9..16,
                                                inferred_type: None,
                                            },
                                            type_args: None,
                                            args: [
                                                Expr {
                                                    kind: Function(
                                                        Function {
                                                            type_params: None,
                                                            params: [
                                                                FuncParam {
                                                                    pattern: Pattern {
                                                                        kind: Ident(
                                                                            BindingIdent {
                                                                                name: "id",
                                                                                span: 21..23,
                                                                                mutable: false,
                                                                            },
                                                                        ),
                                                                        span: 21..23,
                                                                        inferred_type: None,
                                                                    },
                                                                    type_ann: None,
                                                                    optional: false,
                                                                },
                                                            ],
                                                            body: Expr(
                                                                Expr {
                                                                    kind: TemplateLiteral(
                                                                        TemplateLiteral {
                                                                            parts: [
                                                                                Str {
                                                                                    span: 28..30,
                                                                                    value: "x",
                                                                                },
                                                                                Str {
                                                                                    span: 35..36,
                                                                                    value: "",
                                                                                },
                                                                            ],
                                                                            exprs: [
                                                                                Expr {
                                                                                    kind: Ident(
                                                                                        Ident {
                                                                                            name: "id",
                                                                                            span: 32..34,
                                                                                        },
                                                                                    ),
                                                                                    span: 32..34,
                                                                                    inferred_type: None,
                                                                                },
                                                                            ],
                                                                        },
                                                                    ),
                                                                    span: 28..36,
                                                                    inferred_type: None,
                                                                },
                                                            ),
                                                            type_ann: None,
                                                            throws: None,
                                                            is_async: false,
                                                            is_gen: false,
                                                        },
                                                    ),
                                                    span: 17..36,
                                                    inferred_type: None,
                                                },
                                            ],
                                            opt_chain: false,
                                            throws: None,
                                        },
                                    ),
                                    span: 9..37,
                                    inferred_type: None,
                                },
                                property: Ident(
                                    Ident {
                                        name: "join",
                                        span: 38..42,
                                    },
                                ),
                                opt_chain: false,
                            },
                        ),
                        span: 9..42,
                        inferred_type: None,
                    },
                    type_args: None,
                    args: [
                        Expr {
                            kind: Str(
                                Str {
                                    span: 43..47,
                                    value: ", ",
                                },
                            ),
                            span: 43..47,
                            inferred_type: None,
                        },
                    ],
                    opt_chain: false,
                    throws: None,
                },
            ),
            span: 9..48,
            inferred_type: None,
        },
    ],
}
