crates/escalier_parser/src/snapshots/escalier_parser__parser__tests__lex_template_string.snap
---
source: crates/escalier_parser/src/parser.rs
expression: "tokens[0].kind"
---
StrTemplateLit {
    parts: [
        Token {
            kind: StrLit(
                "abc",
            ),
            span: 0..5,
        },
    ],
    exprs: [],
}
