crates/escalier_parser/src/snapshots/escalier_parser__parser__tests__lex_template_string_with_exprs.snap
---
source: crates/escalier_parser/src/parser.rs
expression: "tokens[0].kind"
---
StrTemplateLit {
    parts: [
        Token {
            kind: StrLit(
                "abc",
            ),
            span: 0..4,
        },
        Token {
            kind: StrLit(
                "",
            ),
            span: 8..9,
        },
    ],
    exprs: [
        Expr {
            kind: Identifier(
                "x",
            ),
            span: 6..7,
        },
    ],
}
